fix(checkbox): support high contrast in FF.

--- a/packages/mdc-checkbox/_mixins.scss
+++ b/packages/mdc-checkbox/_mixins.scss
@@ -320,7 +320,6 @@
   width: 100%;
   transition: mdc-checkbox-transition-exit(opacity, 0ms, $mdc-checkbox-transition-duration * 2);
   opacity: 0;
-  stroke: currentColor;
 
   .mdc-checkbox--upgraded & {
     opacity: 1;
